# src/main/java/com/company/oa/dto/SysRoleDTO.java
@@ -1,0 +1,13 @@
+package com.company.oa.dto;
+
+import lombok.Data;
+import javax.validation.constraints.NotBlank;
+
+@Data
+public class SysRoleDTO {
+    @NotBlank(message = "角色名称不能为空")
+    private String name;
+    @NotBlank(message = "角色编码不能为空")
+    private String code;
+    private Integer status;
+}
